# awesome-codex-plugins

./: CONTRIBUTING.md  README.md  SCANNER_GUIDE.md  github-bio.txt  plugins.json
.agents/plugins/: marketplace.json
.github/workflows/: scanner-example-lint.yml  scanner-example-strict.yml  scanner-example.yml
plugins/CALLE-AI/call-e-integrations/.codex-plugin/: plugin.json
plugins/GanyuanRan/Aegis/: README.md
plugins/Kanevry/session-orchestrator/: README.md
plugins/Maksim-Burtsev/simple-man/: LICENSE
plugins/Maksim-Burtsev/simple-man/.codex-plugin/: plugin.json
plugins/Maksim-Burtsev/simple-man/skills/simple-man/: SKILL.md
plugins/Xquik-dev/hermes-tweet/: .codexignore  LICENSE  README.md  SECURITY.md  pyproject.toml
plugins/Xquik-dev/hermes-tweet/.codex-plugin/: plugin.json
plugins/Xquik-dev/hermes-tweet/skills/hermes-tweet/: SKILL.md
plugins/aient-ai/aient-codex-plugin/: .codexignore  .mcp.json  LICENSE  README.md  SECURITY.md
plugins/aient-ai/aient-codex-plugin/.codex-plugin/: plugin.json
plugins/aient-ai/aient-codex-plugin/skills/aient/: SKILL.md
plugins/alirezarezvani/claude-skills/: README.md
plugins/alirezarezvani/claude-skills/.codex/skills/: aeo  security-guidance
plugins/bcanfield/agentic-tech-debt/: LICENSE  README.md
plugins/bcanfield/agentic-tech-debt/.codex-plugin/: plugin.json
plugins/bcanfield/agentic-tech-debt/hooks/: drop.py  feedback.py  hooks.json  session-start.py  stop.py
plugins/bcanfield/agentic-tech-debt/skills/add/: SKILL.md
plugins/bcanfield/agentic-tech-debt/skills/init/: SKILL.md
plugins/bcanfield/agentic-tech-debt/skills/metrics/: SKILL.md
plugins/bcanfield/agentic-tech-debt/skills/review/: SKILL.md
plugins/douglasmonsky/codex-usage-tracker/: .mcp.json  LICENSE  README.md  SECURITY.md
plugins/douglasmonsky/codex-usage-tracker/.codex-plugin/: plugin.json
plugins/douglasmonsky/codex-usage-tracker/skills/codex-usage-tracker/: SKILL.md
plugins/epicsagas/epiccounty/epic-harness/.codex-plugin/: plugin.json
plugins/hashgraph-online/registry-broker-codex-plugin/.codex-plugin/: plugin.json
plugins/ouonet/praxis/: README.md  package.json
plugins/ouonet/praxis/.codex-plugin/: plugin.json
plugins/ouonet/praxis/skills/review/: SKILL.md
plugins/ouonet/praxis/skills/tdd/: SKILL.md
plugins/ouonet/praxis/skills/triage/: SKILL.md
plugins/study8677/antigravity-workspace-template/.codex-plugin/: plugin.json
plugins/val-town/plugins/: .codexignore  .mcp.json  README.md
plugins/val-town/plugins/.codex-plugin/: plugin.json
plugins/val-town/plugins/skills/cron-and-intervals/: SKILL.md
plugins/val-town/plugins/skills/email/: SKILL.md
plugins/val-town/plugins/skills/http-endpoints/: SKILL.md
plugins/val-town/plugins/skills/oauth/: SKILL.md
plugins/val-town/plugins/skills/react-ui/: SKILL.md
plugins/val-town/plugins/skills/sqlite-storage/: SKILL.md
plugins/x4cc3/casefile/.codex-plugin/: plugin.json
plugins/zagrosi-code/zagrosi-forge/: README.md
scripts/: generate_plugins_json.py
(+7 files in other folders)
